# library-api

./: README.md  mise.toml  pyproject.toml
bruno/Library API/: collection.bru
bruno/Library API - YouTube/: bruno.json  collection.bru
bruno/Library API - YouTube/Authentication/: Introspection.bru
bruno/Library API - YouTube/Loans/: Approve a loan.bru  Read all loans.bru  Read my loans.bru  Request a loan.bru
bruno/Library API/Authentication/: Introspection.bru
bruno/Library API/Loans/: Approve a loan.bru  Read all loans.bru
bruno/Library API/environments/: local.bru
bruno/library_api/Loans/: Approve a loan.bru  Read all loans.bru  Request a loan.bru  folder.bru
src/library_api/: __init__.py  cache.py  config.py  main.py
src/library_api/api/: __init__.py  config.py  kernel.py  repositories.py
src/library_api/api/routers/: __init__.py  auth.py  books.py  loans.py  temporary.py
src/library_api/api/security/: __init__.py  authentication.py  authorization.py  exceptions.py  typing.py
src/library_api/domain/: __init__.py  models.py  repositories.py
src/library_api/security/: __init__.py  authentication.py  authorization.py  exceptions.py  http.py  typing.py
tests/: test_auth.py  test_main.py
tests/integration/: conftest.py
tests/integration/security/: __init__.py  test_authentication.py  test_authorization.py
